[package]
name = "basket"
version = "0.0.5"
authors = ["Florian Dieminger <me@fiji-flo.de>"]
description = "API Wrapper around mozilla basket(newsletters)"
edition = "2021"
license = "MIT"
repository = "https://github.com/fiji-flo/basket"
documentation = "https://docs.rs/crate/basket"
keywords = ["Mozilla", "email"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
url = "2"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }